--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                Mar Gonzalez-Franco, <b> Baihan Lin </b>, Christopher Berger, and Jaron Lanier. <u><i> <a href="">Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </a> </u></i> </li></li><br />
 
              <li>
-              <i class="fa-li fa fa-journal"></i>
+              <i class="fa-li fa fa-conference"></i>
               [13]&nbsp;  <b class="text-primary" id="p13"> 2019 ISMB. &nbsp; </b> <br />
                <b> Baihan Lin </b>. <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
 
