--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                    <li>
                     <i class="fa-li fa fa-conference"></i>
                     [7]&nbsp; <b class="text-primary" id="p7"> 2018 IEEE ICDM Workshop. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
+              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://ieeexplore.ieee.org/abstract/document/8637375">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
 
               <li><i class="fa-li fa fa-conference"></i>
                    	[6] &nbsp;  <b class="text-primary" id="p6"> 2017 RECOMB/ISCB Conference on Regulatory & Systems Genomics. &nbsp; </b><br />
