--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
             <table align="left" class="mb-5 text-primary">
 
               <tr><th>From</th><th>Till</th><th>Institute</th><th>Team</th><th>Publications</th><th>Areas</th></tr>
-              <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundation Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p10">[10]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
+              <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p11">[11]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
 
-              <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p14">[14]<a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
+              <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p15">[15]<a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
 
-              <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
+              <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a><a href="#p17">[17]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
 
-              <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p11">[11]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
+              <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]<a><a href="#p12">[12]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
-              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p13">[13]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
+              <tr><td>2018</td><td>2018</td><td> </td><td> Dept. of Systems Biol., Rabadan Lab </td><td><a href="#p14">[14]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: purple;">GT</span> </td></tr>
 
               <tr><td>2017</td><td>2017</td><td> </td><td> Dept. of CS, Pe’er Lab </td><td><a href="#p6">[6]<a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td></tr>
 
               <tr><td>2017</td><td>2017</td><td>University of Washington</td><td> UbiComp Lab of CSE & EE, Patel Lab </td><td></td><td><span style="color: brown;">HCI</span>,<span style="color: red;">ML</span>,<span style="color: salmon;">TM</span> </td></tr>
 
-              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design, Baker Lab </td><td><a href="#p12">[12]<a></td><td><span style="color: forestgreen;">SB</span> </td></tr>
+              <tr><td>2015</td><td>2017</td><td></td><td> Institute for Protein Design, Baker Lab </td><td><a href="#p13">[13]<a></td><td><span style="color: forestgreen;">SB</span> </td></tr>
 
               <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td><td><span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td></tr>
 
@@ -275,79 +275,107 @@
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
 
+ 
+             <li>        
+              <i class="fa-li fa fa-conference"></i>
+              [17]&nbsp; <b class="text-primary" id="p17"> under review. &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte. <br />
+              <u><i> <a href="">Visualizing Representational Dynamics with Multidimensional Scaling Alignment. </a> </u></i>  </li><br />
+
              <li>
+              <i class="fa-li fa fa-journal"></i>
+              [16]&nbsp;  <b class="text-primary" id="p16"> under review. &nbsp; </b> <br />
+               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
+               <u><i> <a href="">Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </a> </u></i> </li></li><br />
+
+            <li>
               <i class="fa-li fa fa-journal"></i>
               [15]&nbsp;  <b class="text-primary" id="p15"> under review. &nbsp; </b> <br />
-               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b> Baihan Lin </b>, and Jaime Olavarria. <u><i> <a href="">Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </a> </u></i> </li></li><br />
-
-            <li>
-              <i class="fa-li fa fa-journal"></i>
-              [14]&nbsp;  <b class="text-primary" id="p14"> under review. &nbsp; </b> <br />
-               Mar Gonzalez-Franco, <b> Baihan Lin </b>, Christopher Berger, and Jaron Lanier. <u><i> <a href="">Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </a> </u></i> </li></li><br />
+               Mar Gonzalez-Franco, <b><span style="color: dimgray;">Baihan Lin</span></b>, Christopher Berger, and Jaron Lanier. <br />
+               <u><i> <a href="">Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </a> </u></i> </li></li><br />
 
              <li>
               <i class="fa-li fa fa-conference"></i>
-              [13]&nbsp;  <b class="text-primary" id="p13"> 2019 ISMB. &nbsp; </b> <br />
-               <b> Baihan Lin </b>. <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
+              [14]&nbsp;  <b class="text-primary" id="p14"> 2019 ISMB. &nbsp; </b> <br />
+               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
+               <u><i> <a href="">Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </a> </u></i> </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
-              [12]&nbsp;  <b class="text-primary" id="p12"> 2019 Journal of the American Chemical Society. &nbsp; </b> <br />
-               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b> Baihan Lin </b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <u><i> <a href="https://pubs.acs.org/doi/10.1021/jacs.9b01978">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
+              [13]&nbsp;  <b class="text-primary" id="p13"> 2019 Journal of the American Chemical Society. &nbsp; </b> <br />
+               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b><span style="color: dimgray;">Baihan Lin</span></b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <br />
+               <u><i> <a href="https://pubs.acs.org/doi/10.1021/jacs.9b01978">Self-assembling 2d arrays with de novo protein building blocks. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-conference"></i>
-              [11]&nbsp; <b class="text-primary" id="p11"> 2019 arXiv. &nbsp; </b><br />
-              <b> Baihan Lin </b>. <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
+              [12]&nbsp; <b class="text-primary" id="p12"> 2019 arXiv. &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
+              <u><i> <a href="https://arxiv.org/abs/1902.10658">Regularity Normalization: Constraining Implicit Space with Minimum Description Length. </a> </u></i> </li><br />
 
             <li>
               <i class="fa-li fa fa-conference"></i>
-              [10]&nbsp; <b class="text-primary" id="p10"> 2019 IJCAI. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Djallel Bouneffouf, Guillermo Cecchi. <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
+              [11]&nbsp; <b class="text-primary" id="p11"> 2019 IJCAI. &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Djallel Bouneffouf, Guillermo Cecchi. <br />
+              <u><i> <a href=""> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </a> </u></i> </li><br />
 
-                   <li>        
+            <li>
+              <i class="fa-li fa fa-conference"></i>
+              [10]&nbsp; <b class="text-primary" id="p10"> 2019 IJCAI Workshop on Human Brain and Artificial Intelligence (HBAI). &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
+              <u><i> <a href=""> Neural Networks as Model Selection with Incremental MDL Normalization. </a> </u></i> </li><br />
+
+             <li>        
               <i class="fa-li fa fa-conference"></i>
               [9]&nbsp; <b class="text-primary" id="p9"> 2018 arXiv. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Nikolaus Kriegeskorte. <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Nikolaus Kriegeskorte. <br />
+              <u><i> <a href="https://arxiv.org/abs/1810.02923">Adaptive Independence Tests with Geo-Topological Transformation. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
                     [8]&nbsp; <b class="text-primary" id="p8"> 2018 arXiv. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <br />
+              <u><i> <a href="https://arxiv.org/abs/1802.00981">Adaptive Representation Selection in Contextual Bandit with Unlabeled History. </a> </u></i>  </li><br />
 
                    <li>
                     <i class="fa-li fa fa-conference"></i>
-                    [7]&nbsp; <b class="text-primary" id="p7"> 2018 IEEE ICDM Workshop. &nbsp; </b><br />
-              <b> Baihan Lin </b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <u><i> <a href="https://ieeexplore.ieee.org/abstract/document/8637375">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
+                    [7]&nbsp; <b class="text-primary" id="p7"> 2018 IEEE ICDM Workshop on Data Science and Big Data Analytics (DSBDA). &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <br />
+              <u><i> <a href="https://ieeexplore.ieee.org/abstract/document/8637375">Contextual Bandit with Adaptive Feature Extraction. </a> </u></i>  </li><br />
 
               <li><i class="fa-li fa fa-conference"></i>
                    	[6] &nbsp;  <b class="text-primary" id="p6"> 2017 RECOMB/ISCB Conference on Regulatory & Systems Genomics. &nbsp; </b><br />
-               Avinash Bukkittu, <b> Baihan Lin </b>,  Trung Vu, and Itsik Pe’er. <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li><br />
+               Avinash Bukkittu, <b><span style="color: dimgray;">Baihan Lin</span></b>,  Trung Vu, and Itsik Pe’er. <br />
+               <u><i> <a href="https://arxiv.org/abs/1711.04078">Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </a> </u></i>  </li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
               [5] &nbsp;  <b class="text-primary" id="p5"> 2017 PLoS One. &nbsp; </b> <br />
-               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, and Yigang Tong. <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li><br />
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, and Yigang Tong. <br />
+               <u><i> <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085">Dynamic Forecasting of Zika Epidemics Using Google Trends. </a> </u></i> </li></li><br />
 
             <li>
               <i class="fa-li fa fa-journal"></i>
               [4] &nbsp;  <b class="text-primary" id="p4"> 2017 Journal of Infection. &nbsp; </b><br />
-               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b> Baihan Lin </b>, Xiaoping An, Yigang Tong, and Dan Feng. <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li><br />
+               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Yigang Tong, and Dan Feng. <br />
+               <u><i> <a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub">Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </a> </u></i>  </li></li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
               [3] &nbsp;  <b class="text-primary"  id="p3"> 2017 Frontiers in cellular and infection microbiology. &nbsp; </b><br />
-                Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b> Baihan Lin </b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li><br />
+                Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <br />
+                <u><i> <a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full">An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </a> </u></i>  </li></li><br />
 
              <li>
                <i class="fa-li fa fa-conference"></i>
                [2] &nbsp; <b class="text-primary" id="p2"> 2016 NeuroFutures Conference. &nbsp; </b><br />
-               <b> Baihan Lin </b>, Adrian K Andelin, Jaime F Olavarria. <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li><br />
+               <b><span style="color: dimgray;">Baihan Lin</span></b>, Adrian K Andelin, Jaime F Olavarria. <br />
+               <u><i> <a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847">Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </a> </u></i>  </li></li><br />
 
             <li>
                <i class="fa-li fa fa-journal"></i>
                [1] &nbsp; <b class="text-primary" id="p1"> 2015 Scientific Reports. &nbsp; </b><br />
-               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b> Baihan Lin </b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
+               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b><span style="color: dimgray;">Baihan Lin</span></b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <br />
+               <u><i> <a href="https://www.nature.com/articles/srep09912">Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </a> </u></i>  </li></li><br />
 
           </ul>
         </div>
