--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0" style="display:inline">B</h1><h2 style="font-size:75px;display:inline">aihan</h2>&nbsp;
+          <h1 class="mb-0" style="display:inline">B</h1><h2 style="font-size:75px;display:inline">aihan</h2>&nbsp;&nbsp;
           <span class="text-primary">
           	<h1 class="mb-0" style="display:inline"> L</h1><h2 class="mb-0" style="font-size:75px;display:inline">in</h2></span>
           <div class="subheading mb-5">Columbia University · New York, NY 10027 · (206) 915-1164 ·
