--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
             <table align="left" class="mb-5 text-primary">
 
               <tr><th>From</th><th>Till</th><th>Institute</th><th>Team</th><th>Publications</th><th>Areas</th></tr>
-              <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p11">[11]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
+              <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]<a><a href="#p8">[8]<a><a href="#p11">[11]<a><a href="#p17">[17]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
 
               <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p15">[15]<a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
 
-              <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a><a href="#p17">[17]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
+              <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]<a><a href="#p18">[18]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
 
               <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]<a><a href="#p12">[12]<a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
@@ -275,12 +275,17 @@
           <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
 
- 
+              <li>        
+              <i class="fa-li fa fa-conference"></i>
+              [18]&nbsp; <b class="text-primary" id="p18"> under review. &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte. <br />
+              <u><i> <a href="">Visualizing Representational Dynamics with Multidimensional Scaling Alignment. </a> </u></i>  </li><br />
+
              <li>        
               <i class="fa-li fa fa-conference"></i>
               [17]&nbsp; <b class="text-primary" id="p17"> under review. &nbsp; </b><br />
-              <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte. <br />
-              <u><i> <a href="">Visualizing Representational Dynamics with Multidimensional Scaling Alignment. </a> </u></i>  </li><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish. <br />
+              <u><i> <a href="">Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. </a> </u></i>  </li><br />
 
              <li>
               <i class="fa-li fa fa-journal"></i>
