--- a/index.html
+++ b/index.html
@@ -653,4 +653,8 @@
 
 </body>
 
+<!-- <div class="flier"><img src="img/rock.png" alt="" style="width:500px;height:300px;"></div> -->
+
+<div class="flier"><img src="img/doge.png" alt="" style="width:300px;height:400px;"></div>
+
 </html>
