--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               <!-- <i class="fa-li fa fa-journal"></i> -->
               [16]&nbsp;  <b class="text-primary" id="p16"> under review. &nbsp; </b> <br />
               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
-              <p style="color:black"> Lack of ocular dominance columns in albino rats increases the size of the binocular region in striate cortex. </p>
+              <p style="color:black"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats. </p>
               <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
               <!-- [<a href="./bibTex/andelin2019lack.txt"  style="color:#3498db">bibTex</a>]&nbsp; -->
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
@@ -332,8 +332,8 @@
               [14]&nbsp;  <b class="text-primary" id="p14"> ISMB 2019. &nbsp; </b> <br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </p>
-              [<a href="" style="color:#3498db">poster</a>]&nbsp;
-              [<a href="./bibTex/clique.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              [<a href="./bibTex/ISMB_scTSA.txt" style="color:#3498db">poster</a>]&nbsp;
+              [<a href="./bibTex/lin2019cliques.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
             </li>  <br />
 
@@ -370,7 +370,7 @@
               [10]&nbsp; <b class="text-primary" id="p10"> IJCAI 2019 Workshop on Human Brain and Artificial Intelligence (HBAI). &nbsp; </b><br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Neural Networks as Model Selection with Incremental MDL Normalization. </p>
-              [<a href="" style="color:#3498db">arXiv</a>]&nbsp;
+              [<a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>]&nbsp;
               [<a href="./bibTex/lin2019neural.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               [<a href="https://app.box.com/s/ruycgz8p7rh30taj38d8dkc0h1ptltg1"  style="color:#3498db">code</a>]&nbsp;
 
@@ -406,7 +406,7 @@
               [7]&nbsp; <b class="text-primary" id="p7"> IEEE ICDM 2018 Workshop on Data Science and Big Data Analytics (DSBDA). &nbsp; </b><br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish. <br />
               <p style="color:black"> Contextual Bandit with Adaptive Feature Extraction. </p>
-              [<a href="https://ieeexplore.ieee.org/abstract/document/8637375" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/lin2018contextual.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/lin2018contextual.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
@@ -430,7 +430,7 @@
               [5] &nbsp;  <b class="text-primary" id="p5"> PLoS One. &nbsp; </b> <br />
               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, and Yigang Tong. <br />
               <p style="color:black"> Dynamic Forecasting of Zika Epidemics Using Google Trends. </p>
-              [<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0165085" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/teng2017dynamic.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/teng2017dynamic.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
@@ -439,7 +439,7 @@
               [4] &nbsp;  <b class="text-primary" id="p4"> Journal of Infection. &nbsp; </b><br />
               Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Yigang Tong, and Dan Feng. <br />
               <p style="color:black"> Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions. </p>
-              [<a href="https://www.sciencedirect.com/science/article/pii/S016344531730049X?via%3Dihub" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/teng2017model.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/teng2017model.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
@@ -448,7 +448,7 @@
               [3] &nbsp;  <b class="text-primary"  id="p3"> Frontiers in cellular and infection microbiology. &nbsp; </b><br />
               Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong. <br />
               <p style="color:black"> An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death. </p>
-              [<a href="https://www.frontiersin.org/articles/10.3389/fcimb.2017.00327/full" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/teng2017integrative.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/teng2017integrative.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
@@ -462,8 +462,9 @@
               [2] &nbsp; <b class="text-primary" id="p2"> NeuroFutures Conference 2016. &nbsp; </b><br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>, Adrian K Andelin, Jaime F Olavarria. <br />
               <p style="color:black"> Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity. </p>
-              [<a href="https://dx.doi.org/10.13140/RG.2.1.1792.9847" style="color:#3498db">poster</a>]&nbsp;
-              [<a href="./bibTex/odc.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              [<a href="./pdfs/NeuroFutures_ODC.txt" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="https://alleninstitute.org/what-we-do/brain-science/events-training/neurofutures-2016/" style="color:#3498db">link</a>]&nbsp;
+              [<a href="./bibTex/lin2016odc.txt" style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
           </ul>
@@ -476,7 +477,7 @@
               [1] &nbsp; <b class="text-primary" id="p1"> Scientific Reports. &nbsp; </b><br />
               Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b><span style="color: dimgray;">Baihan Lin</span></b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao. <br />
               <p style="color:black"> Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak. </p>
-              [<a href="https://www.nature.com/articles/srep09912" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/teng2015.txt" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/teng2015systematic.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
