--- a/index.html
+++ b/index.html
@@ -656,6 +656,6 @@
 
 <!-- <div class="flier"><img src="img/rock.png" alt="" style="width:500px;height:300px;"></div> -->
 
-<div class="flier"><img src="img/doge.png" alt="" style="width:300px;height:400px;"></div>
+<!-- <div class="flier"><img src="img/doge.png" alt="" style="width:300px;height:400px;"></div> -->
 
 </html>
