--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               [13]&nbsp;  <b class="text-primary" id="p13"> ISMB 2019. &nbsp; </b> <br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </p>
-              [<a href="./bibTex/ISMB_scTSA.txt" style="color:#3498db">poster</a>]&nbsp;
+              [<a href="./pdfs/ISMB_scTSA.pdf" style="color:#3498db">poster</a>]&nbsp;
               [<a href="./bibTex/lin2019cliques.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
             </li>  <br />
