--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               [12]&nbsp;  <b class="text-primary" id="p12"> Journal of the American Chemical Society. &nbsp; </b> <br />
               Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b><span style="color: dimgray;">Baihan Lin</span></b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio. <br />
               <p style="color:black"> Self-assembling 2d arrays with de novo protein building blocks. </p>
-              [<a href="https://pubs.acs.org/doi/10.1021/jacs.9b01978" style="color:#3498db">pdf</a>]&nbsp;
+              [<a href="./pdfs/chen2019self.pdf" style="color:#3498db">pdf</a>]&nbsp;
               [<a href="./bibTex/chen2019self.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               [<a href="https://pubs.acs.org/toc/jacsat/141/22"  style="color:#3498db">JACS cover story</a>]&nbsp;
             </li>  <br />
