--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
               Avinash Bukkittu, <b><span style="color: dimgray;">Baihan Lin</span></b>,  Trung Vu, and Itsik Pe’er. <br />
               <p style="color:black"> Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions. </p>
               [<a href="https://arxiv.org/abs/1711.04078" style="color:#3498db">arXiv</a>]&nbsp;
+              [<a href="./pdfs/bukkittu2017parkinson_slides.pdf"  style="color:#3498db">slides</a>]&nbsp;
               [<a href="./bibTex/bukkittu2017parkinson.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
             </li>  <br />
