--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
               [<a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>]&nbsp;
               [<a href="./bibTex/lin2019neural.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               [<a href="https://app.box.com/s/ruycgz8p7rh30taj38d8dkc0h1ptltg1"  style="color:#3498db">code</a>]&nbsp;
+              [<a href="http://www.ijcai-hbai.org/"  style="color:#3498db">link</a>]&nbsp;
+              
 
             </li>  <br />
 
