--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
 
             <tr><th>From</th><th>Till</th><th>Institute</th><th>Team</th><th>Publications</th><th>Areas</th></tr>
             
-            <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p16">[16]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
+            <tr><td>2017</td><td>now</td><td>IBM Research HQ</td><td>CompNeuro & AI Foundations Groups</td><td><a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td></tr>
 
-            <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p14">[14]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
+            <tr><td>2017</td><td>2017</td><td>Microsoft Research HQ</td><td>EPIC Group</td><td><a href="#p16">[16]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td></tr>
 
-            <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]</a><a href="#p17">[17]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
+            <tr><td>2018</td><td>now</td><td>Columbia University</td><td> Visual Inference Group, Kriegeskorte Lab </td><td><a href="#p9">[9]</a><a href="#p14">[14]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span> </td></tr>
 
             <tr><td>2018</td><td>now</td><td> </td><td> NeuroTheory Center, Qian Lab </td><td><a href="#p10">[10]</a><a href="#p12">[12]</a></td><td><span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td></tr>
 
@@ -186,7 +186,7 @@
 
             <tr><td>2016</td><td>2016</td><td></td><td> Dept. of Applied Math, Qian Lab </td><td></td><td><span style="color: teal;">AM</span>,<span style="color: forestgreen;">SB</span></td></tr>
 
-            <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p15">[15]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
+            <tr><td>2014</td><td>2016</td><td></td><td> Vision Neuroscience Group, Olavarria Lab </td><td><a href="#p2">[2]<a><a href="#p17">[17]</a></td><td><span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td></tr>
 
             <tr><td>2014</td><td>2017</td><td>BIME </td><td> State Key Lab of Pathogen & Biosecurity </td><td><a href="#p1">[1]</a><a href="#p3">[3]<a><a href="#p4">[4]</a><a href="#p5">[5]</a></td><td><span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td></tr>
 
@@ -276,24 +276,14 @@
 
           <h2 class="mb-5">Publications</h2>
           
-          <p class="mb-5 text-primary"> <b>17</b> total = <b>6</b> conferences + <b>5</b> journals + <b>6</b> under review / arXiv preprints &nbsp; </p>
+          <p class="mb-5 text-primary"> <b>18</b> total = <b>8</b> conferences + <b>5</b> journals + <b>5</b> under review / arXiv preprints &nbsp; </p>
 
           <h3> ongoing...</h3> <br />
           <ul class="fa-ul mb-0">
 
             <li>        
               <!-- <i class="fa-li fa fa-conference"></i> -->
-              [17]&nbsp; <b class="text-primary" id="p17"> under review. &nbsp; </b><br />
-              <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte. <br />
-              <p style="color:black"> Visualizing Representational Dynamics with Multidimensional Scaling Alignment. </p>
-              [<a href="https://arxiv.org/abs/1906.09264" style="color:#3498db">arXiv</a>]&nbsp;
-              [<a href="./bibTex/lin2019visualize.txt"  style="color:#3498db">bibTex</a>]&nbsp;
-              <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
-            </li>  <br />
-
-            <li>        
-              <!-- <i class="fa-li fa fa-conference"></i> -->
-              [16]&nbsp; <b class="text-primary" id="p16"> under review. &nbsp; </b><br />
+              [18]&nbsp; <b class="text-primary" id="p18"> under review. &nbsp; </b><br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish. <br />
               <p style="color:black"> Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. </p>
               [<a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>]&nbsp;
@@ -303,7 +293,7 @@
 
             <li>
               <!-- <i class="fa-li fa fa-journal"></i> -->
-              [15]&nbsp;  <b class="text-primary" id="p15"> under review. &nbsp; </b> <br />
+              [17]&nbsp;  <b class="text-primary" id="p17"> under review. &nbsp; </b> <br />
               Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria. <br />
               <p style="color:black"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats. </p>
               <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
@@ -313,7 +303,7 @@
 
             <li>
               <!-- <i class="fa-li fa fa-journal"></i> -->
-              [14]&nbsp;  <b class="text-primary" id="p14"> under review. &nbsp; </b> <br />
+              [16]&nbsp;  <b class="text-primary" id="p16"> under review. &nbsp; </b> <br />
               Mar Gonzalez-Franco, <b><span style="color: dimgray;">Baihan Lin</span></b>, Christopher Berger, and Jaron Lanier. <br />
               <p style="color:black"> Enhanced arm reach after a Pinocchio illusion in Virtual Reality. </p>
               <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
@@ -326,6 +316,28 @@
 
           <h3> 2019 </h3> <br />
           <ul class="fa-ul mb-0">
+
+            <li>
+              <!-- <i class="fa-li fa fa-conference"></i> -->
+              [15]&nbsp;  <b class="text-primary" id="p15"> TIPS 2019. &nbsp; </b> <br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
+              <p style="color:black"> Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. </p>
+              <!-- [<a href="./pdfs/TIPS_mentalRL.pdf" style="color:#3498db">poster</a>]&nbsp; -->
+              [<a href="https://www.mcleanhospital.org/technology-psychiatry-summit" style="color:#3498db">link</a>]&nbsp;
+              [<a href="./bibTex/lin2019modeling.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
+            </li>  <br />
+
+              <li>        
+              <!-- <i class="fa-li fa fa-conference"></i> -->
+              [14]&nbsp; <b class="text-primary" id="p14"> CCN 2019. &nbsp; </b><br />
+              <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte. <br />
+              <p style="color:black"> Visualizing Representational Dynamics with Multidimensional Scaling Alignment. </p>
+              [<a href="https://arxiv.org/abs/1906.09264" style="color:#3498db">arXiv</a>]&nbsp;
+              [<a href="./bibTex/lin2019visualize.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              [<a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1424"  style="color:#3498db">link</a>]&nbsp;
+              <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
+            </li>  <br />
 
             <li>
               <!-- <i class="fa-li fa fa-conference"></i> -->
