--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
               [13]&nbsp;  <b class="text-primary" id="p13"> ISMB 2019. &nbsp; </b> <br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </p>
-              [<a href="./pdfs/ISMB_scTSA.pdf" style="color:#3498db">poster</a>]&nbsp;
               [<a href="./pdfs/ISMB_scTSA_slides.pdf" style="color:#3498db">slides</a>]&nbsp;
+              [<a href="./pdfs/ISMB_scTSA.pdf" style="color:#3498db">poster</a>]&nbsp;
               [<a href="https://www.iscb.org/cms_addon/conferences/ismbeccb2019/posters.php?track=BioVis%20COSI&session=A" style="color:#3498db">link</a>]&nbsp;
               [<a href="./bibTex/lin2019cliques.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
@@ -375,8 +375,10 @@
               [11]&nbsp; <b class="text-primary" id="p11"> IJCAI 2019. &nbsp; </b><br />
               <b><span style="color: dimgray;">Baihan Lin</span></b>, Djallel Bouneffouf, Guillermo Cecchi. <br />
               <p style="color:black"> Split Q Learning: Reinforcement Learning with Two-Stream Rewards. </p>
-              [<a href="https://arxiv.org/abs/1906.12350" style="color:#3498db">arXiv</a>]&nbsp;
-              [<a href="./bibTex/lin2019split.txt"  style="color:#3498db">bibTex</a>]&nbsp;
+              [<a href="https://arxiv.org/abs/1906.12350" style="color:#3498db">arXiv</a>]&nbsp;  
+              [<a href="./pdfs/IJCAI_SQL_slides.pdf"  style="color:#3498db">slides</a>]&nbsp;
+            [<a href="./pdfs/IJCAI_SQL_poster.pdf"  style="color:#3498db">poster</a>]&nbsp;
+            [<a href="./bibTex/lin2019split.txt"  style="color:#3498db">bibTex</a>]&nbsp;
             </li>  <br />
 
             <li>
@@ -385,6 +387,8 @@
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Neural Networks as Model Selection with Incremental MDL Normalization. </p>
               [<a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>]&nbsp;
+              [<a href="./pdfs/IJCAI_RN_slides.pdf"  style="color:#3498db">slides</a>]&nbsp;
+            [<a href="./pdfs/IJCAI_RN_poster.pdf"  style="color:#3498db">poster</a>]&nbsp;
               [<a href="https://app.box.com/s/ruycgz8p7rh30taj38d8dkc0h1ptltg1"  style="color:#3498db">code</a>]&nbsp;
               [<a href="http://www.ijcai-hbai.org/"  style="color:#3498db">link</a>]&nbsp;
               [<a href="./bibTex/lin2019neural.txt"  style="color:#3498db">bibTex</a>]&nbsp;
