--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               <b><span style="color: dimgray;">Baihan Lin</span></b>. <br />
               <p style="color:black"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. </p>
               [<a href="./pdfs/ISMB_scTSA_slides.pdf" style="color:#3498db">slides</a>]&nbsp;
-              [<a href="./pdfs/ISMB_scTSA.pdf" style="color:#3498db">poster</a>]&nbsp;
+              [<a href="./pdfs/ISMB_scTSA_poster.pdf" style="color:#3498db">poster</a>]&nbsp;
               [<a href="https://www.iscb.org/cms_addon/conferences/ismbeccb2019/posters.php?track=BioVis%20COSI&session=A" style="color:#3498db">link</a>]&nbsp;
               [<a href="./bibTex/lin2019cliques.txt"  style="color:#3498db">bibTex</a>]&nbsp;
               <!-- [<a href=""  style="color:#3498db">code</a>]&nbsp; -->
